provisioning/app-proxy/kubernetes/templates/proxy/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-proxy
  namespace: $NAMESPACE
  labels:
    app: app-proxy
    releaseId: $RELEASE_ID
spec:
  replicas: $APP_PROXY_REPLICAS
  selector:
    matchLabels:
      app: app-proxy
  template:
    metadata:
      labels:
        app: app-proxy
        releaseId: $RELEASE_ID
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "app-proxy"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/app-proxy.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9000/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
      containers:
        - name: app-proxy
          image: $APP_PROXY_REPOSITORY:$APP_PROXY_IMAGE_TAG
          resources:
            requests:
              cpu: "200m"
              memory: "768Mi"
            limits:
              memory: "768Mi"
          ports:
            - containerPort: 8000 # Proxy
            - containerPort: 9000 # metrics
          startupProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesStartupProbe
            initialDelaySeconds: 10
            periodSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesReadinessProbe
            periodSeconds: 10
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesLivenessProbe
            periodSeconds: 10
            failureThreshold: 3
      tolerations:
        - key: app
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        nodepool: main
